--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -52,7 +52,7 @@
                 class="cs-color cs-popup-joinus-btn login-popup ml-0"
               >Register</a>
             </span>
-            <a class="get-start-btn" href="register-restaurant.html">
+            <a class="get-start-btn" href="{% url 'accounts:registerVendor' %}">
               Register Restaurant
             </a>
           </div>
