--- a/templates/includes/alerts.html
+++ b/templates/includes/alerts.html
@@ -1,6 +1,6 @@
 {% if messages %}
   {% for message in messages %}
-    <div class="alert alert-{{messages.tags}} show-notification" role="alert">
+    <div class="alert alert-{{message.tags}} show-notification" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="close">
         <span aria-hidden="true">&times;</span>
       </button>
