--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -19,17 +19,17 @@
           <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
             <div class="user-holder">
               <h4 class="text-center" style="margin-bottom: 0">
-                SIGN IN
+                Forgot your password?
               </h4>
               <p class="text-center">
-                Order food from your favorite restaurants
+                Plaease enter your email address and we will send you a link to reset your password.
               </p>
               <hr />
               <div id="restaurant-sets-holder">
                 <form
                   class="form-fields-set foodbakery-dev-restaurant-form"
                   method="post"
-                  action="{% url 'accounts:login' %}"
+                  action="{% url 'accounts:forgot_password' %}"
                 >
                   {% csrf_token %}
                   <ul
@@ -47,14 +47,6 @@
                                 <input type="email" name="email" placeholder="Enter your email address">
                               </div>
                             </div>
-                            <div
-                              class="col-lg-12 col-md-6 col-sm-6 col-xs-12"
-                            >
-                              <div class="field-holder">
-                                <label>Password</label>
-                                <input type="password" name="password" placeholder="Enter your password">
-                              </div>
-                            </div>
                           </div>
                         </div>
                       </div>
@@ -66,16 +58,10 @@
                             <div class="payment-holder">
                               <input
                                 type="submit"
-                                value="SIGN IN"
+                                value="CONTINUE"
                                 id="btn-next-restaurant-information"
                                 class="bgcolor"
                               />
-                              <a 
-                                href="{% url 'accounts:forgot_password' %}"
-                                class="float-right"
-                              >
-                                Forgot Password
-                              </a>
                             </div>
                           </div>
                         </div>
