--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -19,17 +19,14 @@
           <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
             <div class="user-holder">
               <h4 class="text-center" style="margin-bottom: 0">
-                SIGN IN
+                Reset Your Password
               </h4>
-              <p class="text-center">
-                Order food from your favorite restaurants
-              </p>
               <hr />
               <div id="restaurant-sets-holder">
                 <form
                   class="form-fields-set foodbakery-dev-restaurant-form"
                   method="post"
-                  action="{% url 'accounts:login' %}"
+                  action="{% url 'accounts:reset_password' %}"
                 >
                   {% csrf_token %}
                   <ul
@@ -43,16 +40,16 @@
                               class="col-lg-12 col-md-6 col-sm-6 col-xs-12"
                             >
                               <div class="field-holder">
-                                <label>Email Address</label>
-                                <input type="email" name="email" placeholder="Enter your email address">
+                                <label>Password</label>
+                                <input type="password" name="password" placeholder="Set new password">
                               </div>
                             </div>
                             <div
                               class="col-lg-12 col-md-6 col-sm-6 col-xs-12"
                             >
                               <div class="field-holder">
-                                <label>Password</label>
-                                <input type="password" name="password" placeholder="Enter your password">
+                                <label>Confirm Password</label>
+                                <input type="password" name="confirm_password" placeholder="Confirm new password">
                               </div>
                             </div>
                           </div>
@@ -66,16 +63,10 @@
                             <div class="payment-holder">
                               <input
                                 type="submit"
-                                value="SIGN IN"
+                                value="RESET PASSWORD"
                                 id="btn-next-restaurant-information"
                                 class="bgcolor"
                               />
-                              <a 
-                                href="{% url 'accounts:forgot_password' %}"
-                                class="float-right"
-                              >
-                                Forgot Password
-                              </a>
                             </div>
                           </div>
                         </div>
