--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -2,7 +2,7 @@
 <!-- Header Start -->
 <header id="header">
   <div class="main-header">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
           <div class="logo">
@@ -40,6 +40,12 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
           <div class="login-option">
+            <a 
+              href="{% url 'marketplace:marketplace' %}" 
+              class="btn btn-outline-danger font-weight-bold"
+            >
+              Marketplace
+            </a>
             {% if user.is_authenticated %}
             <a
               class="cs-color cs-popup-joinus-btn login-popup"
