--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -167,16 +167,40 @@
                         </div>
                         <div class="price-holder">
                           <span class="price">${{food.price}}</span>
-                          <a href="#" class="restaurant-add-menu-btn"
-                            ><i class="icon-plus4 text-color"></i
-                          ></a>
-                          <span id="add-menu-loader-10"></span>
+                          <a 
+                            href="#" 
+                            class="decrease_cart"
+                            style="margin-right: 28px;"
+                            data-id="{{food.id}}"
+                            data-url="{% url 'marketplace:decrease_cart' food.id %}"
+                          >
+                            <i class="icon-minus text-color"></i>
+                          </a>
+                          <label id="qty-{{food.id}}">0</label>
+                          <a 
+                            href="#" 
+                            class="add_to_cart"
+                            data-id="{{food.id}}"
+                            data-url="{% url 'marketplace:add_to_cart' food.id %}"
+                          >
+                            <i class="icon-plus4 text-color"></i>
+                          </a>
+                          
                         </div>
                       </li>
                       {% endfor %}
                     </ul>
                     {% endfor %}
                   </div>
+                  {% for item in cart_items %}
+                  <span 
+                    id="qty-{{item.fooditem.id}}" 
+                    class="item_qty d-none" 
+                    data-qty="{{item.quantity}}"
+                  >
+                    {{item.quantity}}
+                  </span>
+                  {% endfor %}
                 </div>
               </div>
             </div>
