--- a/templates/marketplace/listings.html
+++ b/templates/marketplace/listings.html
@@ -66,6 +66,15 @@
                         </small>
                       </span>
                       {% endif %}
+
+                      {% if source_location %}
+                      <br>
+                      <span>
+                        <small>
+                          <b>{{vendor.kms}}</b>km away from {{source_location}}
+                        </small>
+                      </span>
+                      {% endif %}
                     </div>
                     <div class="list-option">
                       <a href="{% url 'marketplace:vendor_detail' vendor.vendor_slug %}" class="viewmenu-btn text-color">View Menu</a>
