Implement get user's current location and show nearby restaurant

--- a/templates/home.html
+++ b/templates/home.html
@@ -135,14 +135,14 @@
               <li class="has-border">
                 <figure>
                   {% if vendor.user_profile.profile_picture %}
-                  <a href="#"
+                  <a href="{% url 'marketplace:vendor_detail' vendor.vendor_slug %}"
                     ><img
                       src="{{ vendor.user_profile.profile_picture.url }}"
                       class="attachment-full size-full wp-post-image"
                       alt=""
                   /></a>
                   {% else %}
-                  <a href="#"
+                  <a href="{% url 'marketplace:vendor_detail' vendor.vendor_slug %}"
                     ><img
                       src="{% static 'images/default-profile.png' %}"
                       class="attachment-full size-full wp-post-image"
@@ -187,14 +187,14 @@
                   <div class="img-holder">
                     <figure>
                       {% if vendor.user_profile.profile_picture %}
-                      <a href="#"
+                      <a href="{% url 'marketplace:vendor_detail' vendor.vendor_slug %}"
                         ><img
                           src="{{ vendor.user_profile.profile_picture.url }}"
                           class="img-thumb wp-post-image"
                           alt=""
                       /></a>
                       {% else %}
-                      <a href="#"
+                      <a href="{% url 'marketplace:vendor_detail' vendor.vendor_slug %}"
                         ><img
                           src="{% static 'images/default-profile.png' %}"
                           class="img-thumb wp-post-image"
@@ -209,7 +209,7 @@
                   <div class="text-holder">
                     <div class="post-title">
                       <h5>
-                        <a href="listing-detail.html">{{ vendor }}</a>
+                        <a href="{% url 'marketplace:vendor_detail' vendor.vendor_slug %}">{{ vendor }}</a>
                       </h5>
                     </div>
                     <span>
@@ -223,6 +223,14 @@
                         , {{ vendor.user_profile.pin_code }}
                       {% endif %}
                     </span>
+                    {% if vendor.kms %}
+                      <br>
+                      <span>
+                        <small>
+                          <b>{{vendor.kms}} km </b>away
+                        </small>
+                      </span>
+                    {% endif %}
                   </div>
                 </div>
               </li>
