--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -24,13 +24,15 @@
                   <input
                     type="text"
                     value=""
+                    id="location"
                     name="location"
-                    placeholder="Enter your delivery location"
+                    placeholder="Your current location"
                     autocomplete="off"
                   />
                   <span
                     id="foodbakery_radius_location_open"
                     class="foodbakery-radius-location"
+                    onclick="getLocation()"
                     ><i class="icon-target5"></i
                   ></span>
                 </form>
@@ -94,3 +96,39 @@
   </div>
 </header>
 <!-- Header End -->
+
+<script>
+  const x = document.getElementById("location");
+  var current_location = sessionStorage.getItem("current_location");
+  if(current_location != ""){
+    x.value = current_location;
+  }
+  
+  function getLocation() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(showPosition);
+    } else { 
+      x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+  }
+  
+  function showPosition(position) {
+    var lat = position.coords.latitude;
+    var lng = position.coords.longitude;
+
+    // Hit AJAX request to googlemaps api endpoint
+    // and get the location data using those lat and lng
+    var GOOGLE_API_KEY = "{{GOOGLE_API_KEY}}"
+    var url = "https://maps.googleapis.com/maps/api/geocode/json?latlng=" + lat + "," + lng + "&key=" + GOOGLE_API_KEY;
+    $.ajax({
+      url: url,
+      type: "GET",
+      success: function(response) {
+        var location = response.results[0].formatted_address;
+        x.value = location;
+        sessionStorage.setItem("current_location", location);
+        window.location = "?lat=" + lat + "$lng=" + lng;
+      }
+    })
+  }
+  </script>
