--- a/foodOnline_main/static/css/custom.css
+++ b/foodOnline_main/static/css/custom.css
@@ -34,3 +34,15 @@
 .main-search.fancy .field-holder input[type="text"] {
   color: #000000 !important;
 }
+
+table>tbody>td>td {
+  border: none !important;
+}
+
+#opening_hours select {
+  padding: 5px 10px !important;
+}
+
+.btn-success.add_hour {
+  padding: 7px 15px 7px 15px;
+}
