--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -6,21 +6,72 @@
   <div class="page-section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <div class="tabs-holder horizontal">
             <ul class="stickynav-tabs nav nav-tabs">
               <li class="active">
                 <a data-toggle="tab" href="#home"
-                  ><i class="fa fa-shopping-cart text-danger"></i>Cart Items</a
+                  ><i class="fa fa-shopping-cart text-danger"></i>Billing Address</a
                 >
               </li>
             </ul>
             <div class="tab-content">
               <div id="home" class="tab-pane in active">
                 <div class="menu-itam-holder">
-                  <div class="text-center p-5" id="empty-cart" style="display: none;">
-                    <h3>Cart is empty</h3>
+                  <div id="menu-item-list-6272" class="menu-itam-list">
+                    <form action="#" id="billing_address_form">
+                      {% csrf_token %}
+                      <div class="row">
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          First Name: {{ form.first_name }}
+                        </div>
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          Last Name: {{ form.last_name }}
+                        </div>
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          Phone Number: {{ form.phone }}
+                        </div>
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          Email Address: {{ form.email }}
+                        </div>
+                        <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                          Address: {{ form.address }}
+                        </div>
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          Country: {{ form.country }}
+                        </div>
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          State: {{ form.state }}
+                        </div>
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          City: {{ form.city }}
+                        </div>
+                        <div class="form-group col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                          Pin Code: {{ form.pin_code }}
+                        </div>
+                      
+                      </div>
+                    </form>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Your order section -->
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+          <div class="tabs-holder horizontal">
+            <ul class="stickynav-tabs nav nav-tabs">
+              <li class="active">
+                <a data-toggle="tab" href="#home"
+                  ><i class="icon- icon-room_service"></i>Your Order</a
+                >
+              </li>
+            </ul>
+            <div class="tab-content">
+              <div id="home" class="tab-pane in active">
+                <div class="menu-itam-holder">
                   <div id="menu-item-list-6272" class="menu-itam-list">
                     <ul>
                       {% if cart_items %}
@@ -42,35 +93,19 @@
                               {{item.fooditem.vendor}}
                             </a>
                           </div>
+                          <div 
+                            class="quantity" 
+                            style="display: inline-block; 
+                                   position: absolute; 
+                                   top: 50%; 
+                                   transform: 
+                                   translateY(-50%);
+                                   margin-top: -10px;"
+                          >
+                            <span>{{item.quantity}} QTY</span>
+                          </div>
                           <div class="price-holder">
                             <span class="price">${{item.fooditem.price}}</span>
-                            <a 
-                              href="#" 
-                              class="decrease_cart"
-                              id="{{item.id}}"
-                              style="margin-right: 28px;"
-                              data-id="{{item.fooditem.id}}"
-                              data-url="{% url 'marketplace:decrease_cart' item.fooditem.id %}"
-                            >
-                              <i class="icon-minus text-color"></i>
-                            </a>
-                            <label id="qty-{{item.fooditem.id}}">0</label>
-                            <a 
-                              href="#" 
-                              class="add_to_cart"
-                              data-id="{{item.fooditem.id}}"
-                              data-url="{% url 'marketplace:add_to_cart' item.fooditem.id %}"
-                            >
-                              <i class="icon-plus4 text-color"></i>
-                            </a>
-                            <a 
-                              href="#" 
-                              class="delete_cart"
-                              data-id="{{item.id}}"
-                              data-url="{% url 'marketplace:delete_cart' item.id %}"
-                            >
-                              <i class="icon-delete text-color"></i>
-                            </a>
                           </div>
                         </li>
                         {% endfor %}
@@ -81,34 +116,6 @@
                       {% endif %}
                     </ul>
                   </div>
-                  {% for item in cart_items %}
-                  <span 
-                    id="qty-{{item.fooditem.id}}" 
-                    class="item_qty d-none" 
-                    data-qty="{{item.quantity}}"
-                  >
-                    {{item.quantity}}
-                  </span>
-                  {% endfor %}
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Your order section -->
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-          <div class="tabs-holder horizontal">
-            <ul class="stickynav-tabs nav nav-tabs">
-              <li class="active">
-                <a data-toggle="tab" href="#home"
-                  ><i class="icon- icon-room_service"></i>Your Order</a
-                >
-              </li>
-            </ul>
-            <div class="tab-content">
-              <div id="home" class="tab-pane in active">
-                <div class="menu-itam-holder">
                   <div>
                     <ul>
                       <li style="list-style-type: none;">
@@ -137,12 +144,13 @@
                         </span>
                       </li>
 
-                      <a 
-                        href="{% url 'checkout' %}" 
+                      <button
+                        type="submit"
+                        form="billing_address_form"
                         class="btn btn-danger w-100 p-2 mt-3"
                       >
-                        PROCEED TO CHECKOUT
-                      </a>
+                        PLACE ORDER
+                    </button>
                     </ul>
                   </div>
                 </div>
