--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -150,6 +150,7 @@
   var grand_total = "{{ grand_total }}";
   var url = "{% url 'orders:payments' %}";
   var order_number = {{order.order_number}};
+  var order_complete_url = "{% url 'orders:order_complete' %}"
   
   // Render the PayPal button into #paypal-button-container
   paypal.Buttons({
@@ -170,7 +171,10 @@
         var status = orderData.status;
         var payment_method = "Paypal";
         sendTransaction(transaction_id, payment_method, status);
-            
+        
+        const element = document.getElementById('paypal-button-container');
+        element.innerHTML = '';
+        element.innerHTML = '<h4 class="text-center"><i class="fa fa-spinner fa-spin"></i>Please wait...</h4>';
       });
     }
   }).render('#paypal-button-container');
@@ -189,6 +193,9 @@
       },
       success: function(response){
         console.log(response);
+        window.location.href = order_complete_url + 
+          "?order_no=" + response.order_number +
+          "&trans_id=" + response.transaction_id;
       }
     })
   }
