--- a/templates/includes/c_sidebar.html
+++ b/templates/includes/c_sidebar.html
@@ -6,8 +6,8 @@
             ><i class="icon-dashboard3"></i>Dashboard</a
           >
         </li>
-        <li>
-          <a href="restaurant-restaurant.html"
+        <li class="{% if '/my_orders/' in request.path or "order_detail/" in request.path %}active{% endif %}">
+          <a href="{% url 'accounts:customers:customer_my_orders' %}"
             ><i class="icon-add_shopping_cart"></i>My Orders</a
           >
         </li>
@@ -17,12 +17,7 @@
           >
         </li>
         <li>
-          <a href="restaurant-orders.html"
-            ><i class="icon-unlock-alt"></i>Change Password</a
-          >
-        </li>
-        <li>
-          <a class="logout-btn" href="registration.html"
+          <a class="logout-btn" href="{% url 'accounts:logout' %}"
             ><i class="icon-log-out"></i>Signout</a
           >
         </li>
