--- a/templates/accounts/vendorDashboard.html
+++ b/templates/accounts/vendorDashboard.html
@@ -18,6 +18,7 @@
           <div class="user-dashboard loader-holder">
             <div class="user-holder">
               <h5 class= "text-uppercase">Overview</h5>
+              <p class="text-right">Logged in as: <b>{{user.email}}</b></p>
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                   <div class="card">
@@ -35,7 +36,7 @@
                       Total Revenue
                     </div>
                     <div class="card-body text-center">
-                      <a href="#"><h5 class="card-title">$5263.00</h5></a>
+                      <a href="#"><h5 class="card-title">${{total_revenue | floatformat:2}}</h5></a>
                     </div>
                   </div>
                 </div>
@@ -45,7 +46,7 @@
                       This Month
                     </div>
                     <div class="card-body text-center">
-                      <a href="#"><h5 class="card-title">$165.00</h5></a>
+                      <a href="#"><h5 class="card-title">${{current_month_revenue | floatformat:2}}</h5></a>
                     </div>
                   </div>
                 </div>
@@ -57,7 +58,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                   <div class="user-orders-list">
                     <div class="responsive-table">
-                      <table class="table">
+                      <table class="table table-hover" id="myOrdersTable">
                         <thead>
                           <tr>
                             <th scope="col">Order #</th>
@@ -69,14 +70,14 @@
                           </tr>
                         </thead>
                         <tbody>
-                          {% for order in recent_orders %}
+                          {% for order_data in recent_orders %}
                           <tr>
-                            <td>{{order.order_number}}</td>
-                            <td>{{order.name}}</td>
-                            <td>${{order.total}}</td>
-                            <td>{{order.status}}</td>
-                            <td>{{order.created_at}}</td>
-                            <td><a href="{% url 'accounts:vendor:vendor_order_detail' order.order_number %}" class="btn btn-danger">Details</a></td>
+                            <td>{{order_data.order.order_number}}</td>
+                            <td>{{order_data.order.name}}</td>
+                            <td>${{order_data.total.grand_total}}</td>
+                            <td>{{order_data.order.status}}</td>
+                            <td>{{order_data.order.created_at}}</td>
+                            <td><a href="{% url 'accounts:vendor:vendor_order_detail' order_data.order.order_number %}" class="btn btn-danger">Details</a></td>
                           </tr>
                           {% endfor %}
                         </tbody>
