--- a/templates/includes/v_sidebar.html
+++ b/templates/includes/v_sidebar.html
@@ -1,7 +1,7 @@
 <div class="user-account-nav user-account-sidebar">
     <div class="user-nav-list">
       <ul>
-        <li class="{% if '/accounts/vendorDashboard/' == request.path or '/accounts/vendor/' == request.path %}active{% endif %}">
+        <li class="{% if '/vendorDashboard/' in request.path or '/vendor/' == request.path %}active{% endif %}">
           <a href="{% url 'accounts:vendorDashboard' %}"
             ><i class="icon-dashboard3"></i>Dashboard</a
           >
@@ -21,28 +21,13 @@
             ><i class="icon-menu5"></i>Opening Hours</a
           >
         </li>
-        <li>
-          <a href="restaurant-orders.html"
+        <li class="{% if 'my_orders' in request.path %}active{% endif %}">
+          <a href="{% url 'accounts:vendor:vendor_my_orders' %}"
             ><i class="icon-add_shopping_cart"></i>Orders</a
           >
         </li>
         <li>
-          <a href="restaurant-earnings.html"
-            ><i class="icon-money"></i>Earnings</a
-          >
-        </li>
-        <li>
-          <a href="restaurant-statement.html"
-            ><i class="icon-file-text22"></i>Statement</a
-          >
-        </li>
-        <li>
-          <a href="restaurant-change-password.html"
-            ><i class="icon-unlock-alt"></i>Change Password</a
-          >
-        </li>
-        <li>
-          <a class="logout-btn" href="registration.html"
+          <a class="logout-btn" href="{% url 'accounts:logout' %}"
             ><i class="icon-log-out"></i>Signout</a
           >
         </li>
