--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -42,8 +42,8 @@
           <div class="copyright-inner">
             <div class="copy-right">
               <p>
-                © 2020 Foodbakery. All Rights Reserved. Developed By
-                <a href="#">Rathan Kumar</a>
+                © {% now "Y" %} FoodOnline Marketplace. All Rights Reserved. Developed By
+                <a href="#">Hung Lin</a>
               </p>
             </div>
           </div>
