--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -21,21 +21,21 @@
         
         <h6>Hello {{order.name}}, </h6><span>Review your order details below.</span>
         <hr>
-        <div class="d-flex justify-content-between">
-          <div>
-            <span class="d-block">Order Date: </span>
+        <div class="d-flex flex-lg-row flex-column justify-content-between">
+          <div class="d-flex flex-lg-column flex-row justify-content-between">
+            <span>Order Date: </span>
             <span class="font-weight-bold">{{order.created_at}}</span>
           </div>
-          <div>
-            <span class="d-block">Order No: </span>
+          <div class="d-flex flex-lg-column flex-row justify-content-between">
+            <span>Order No: </span>
             <span class="font-weight-bold">{{order.order_number}}</span>
           </div>
-          <div>
-            <span class="d-block">Payment Method: </span>
+          <div class="d-flex flex-lg-column flex-row justify-content-between">
+            <span>Payment Method: </span>
             <span class="font-weight-bold">{{order.payment_method}}</span>
           </div>
-          <div>
-            <span class="d-block">Transaction ID: </span>
+          <div class="d-flex flex-lg-column flex-row justify-content-between">
+            <span>Transaction ID: </span>
             <span class="font-weight-bold">{{order.payment.transaction_id}}</span>
           </div>
         </div>
@@ -96,13 +96,13 @@
           </div>
         </div>
         <hr>
-        <div class="d-flex justify-content-between">
-          <div>
-            <span class="d-block font-weight-bold">Thanks for ordering with us.</span>
+        <div class="d-flex flex-lg-row flex-column justify-content-between">
+          <div class="d-flex flex-lg-column flex-row justify-content-between">
+            <span class="font-weight-bold">Thanks for ordering with us.</span>
             <span>FoodOnline Team</span>
           </div>
-          <div class="d-flex justify-content-end align-items-end">
-            <span class="d-block font-weight-bold">Need help?</span>
+          <div class="d-flex flex-lg-column flex-row justify-content-between">
+            <span class="font-weight-bold">Need help?</span>
             <span>Call - 123456789</span>
           </div>
         </div>
