--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,3 +30,72 @@
   font-size: 12px;
   cursor: pointer;
 }
+
+.main-search.fancy .field-holder input[type="text"] {
+  color: #000000 !important;
+}
+
+table>tbody>td>td {
+  border: none !important;
+}
+
+#opening_hours select {
+  padding: 5px 10px !important;
+}
+
+.btn-success.add_hour {
+  padding: 7px 15px 7px 15px;
+}
+
+.payment-method [type=radio] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.payment-method [type=radio]+img {
+  cursor: pointer;
+  padding: 5px;
+}
+
+.payment-method [type=radio]:checked+img {
+  outline: 2px solid #ff0000;
+}
+
+table td,
+table th {
+  line-height: 1rem !important;
+}
+
+@media only screen and (max-width: 480px) {
+  a.get-start-btn {
+    display: block;
+    margin-top: 15px !important;
+    margin-left: 0 !important;
+  }
+
+  .main-search-bar {
+    padding-top: 100px !important;
+    padding-bottom: 50px !important;
+    background-position: left !important;
+  }
+
+  .user-dashboard {
+    width: 100% !important;
+  }
+
+  .menu-itam-holder .quantity {
+    right: 0 !important;
+    margin-top: -0px !important;
+    top: 50% !important;
+  }
+
+  .table.opening_hours {
+    width: 100% !important;
+  }
+
+  .table td {
+    padding: 0.5rem !important;
+  }
+}
